引用文献表格

--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -115,7 +115,7 @@
 	
 	\begin{abstract}
 		%随着生产技术和社会需求的发展，制造业的门类不断完善。而传感器和计算机的使用，使得制造业中多媒体数据的收集越来越方便。根据多媒体数据的类型进行针对性的快速细致的分析可以在制造业全流程的不同阶段做出及时的决策。可视化与可视分析因其直观性和可交互性，在数据的理解、展示和分析上展现了强大的能力，被频繁应用在制造业多媒体数据分析中。在本文中，我们提出了一个可视化与可视分析的文献综述，专门为制造业多媒体数据。我们根据可视化技术、交互分析方法和应用领域对现有研究进行分类。在制造业研究项目的具体例子中，我们讨论了可视化和可视化分析应用于不同类型的多媒体数据时的差异。最后，我们对现有挑战做了总结，指出未来研究方向。
-		With the development of production technology and social needs, sectors of manufacturing are constantly improving. The use of sensors and computers has made it increasingly convenient to collect multimedia data in manufacturing. Targeted, rapid and detailed analysis based on the type of multimedia data can make timely decisions at different stages of the entire manufacturing process. Visualization and visual analytics are frequently adopted in manufacturing multimedia data analysis because of their powerful ability to understand, present and analyze data in an intuitive and interactive way. In this paper, we present a literature review of visualization and visual analytics specifically for manufacturing multimedia data. We classify existing researches according to visualization techniques, interaction analysis methods and application areas. We discuss the differences when visualization and visual analytics are applied to different types of multimedia data in the context of specific examples from manufacturing research projects. Finally, we summarize the existing challenges and prospect the future research directions.
+		With the development of production technology and social needs, sectors of manufacturing are constantly improving. The use of sensors and computers has made it increasingly convenient to collect multimedia data in manufacturing. Targeted, rapid and detailed analysis based on the type of multimedia data can make timely decisions at different stages of the entire manufacturing process. Visualization and visual analytics are frequently adopted in manufacturing multimedia data analysis because of their powerful ability to understand, present and analyze data in an intuitive and interactive way. In this paper, we present a literature review of visualization and visual analytics specifically for manufacturing multimedia data. We classify existing researches according to visualization techniques, interaction analysis methods and application areas. We discuss the differences when visualization and visual analytics are applied to different types of multimedia data in the context of particular examples from manufacturing research projects. Finally, we summarize the existing challenges and prospect the future research directions.
 	\end{abstract}
 	
 	\maketitle
@@ -180,13 +180,13 @@ These high-quality surveys cover data, technologies and concepts in manufacturin
 Next, we discuss the available surveys from both micro and macro perspectives.
 
 %微观视角针对对制造业中的特定数据或者技术。
-$\bullet$ \textbf{Micro perspective} for specific data or technologies in manufacturing.
+$\bullet$ \textbf{Particular data or technologies in manufacturing}.
 %数据处理技术：针对工业4.0中的复杂高维数据，Chhikara等人从特征抽取和特征选择两个任务出发对比不同的降维技术进行了比较，并对他们的适用行给出了见解。
 \ding{172} Data processing techniques. For complex high-dimensional data in Industry 4.0, Chhikara et al.~\cite{Chhikara2022} compared different dimensionality reduction techniques from two tasks, feature extraction and feature selection, and gave insights into their applicability.
 %特定行业的可视化。以汽车制造为例，为了更好的理解不同类型的数据流，Stevens等人介绍了四类可视化应用，并详细讲解了可视化在汽车制造中作用。
-\ding{173} Visualization of specific industries. Taking automotive manufacturing as an example, to better understand different types of data flow, Stevens et al.~\cite{Schlereth2007} introduce four categories of visualization applications and illustrate the role of visualization in automotive manufacturing in detail.
+\ding{173} Visualization of particular industries. Taking automotive manufacturing as an example, to better understand different types of data flow, Stevens et al.~\cite{Schlereth2007} introduce four categories of visualization applications and illustrate the role of visualization in automotive manufacturing in detail.
 %特定可视化技术。
-\ding{174} Specific visualization techniques. 
+\ding{174} Particular visualization techniques. 
 %增强现实和虚拟现实在制造业数据可视化中有广泛的应用前景。
 Both augmented reality(AR) and virtual reality(VR) have a wide range of promising applications in data visualization in manufacturing.
 %Bruno等介绍了增强现实在工业工程数据可视化的应用。Cardoso等人则评估了增强现实的适用性，及其对真实工业过程的影响。
@@ -195,7 +195,7 @@ Bruno et al.~\cite{Bruno2006} presented the application of AR for industrial eng
 Berg et al.~\cite{Berg2017} investigated the application of VR in design and production of products.
 
 %宏观视角针对制造业的概念与定义，以及经验总结。
-$\bullet$ \textbf{Macro perspective} for manufacturing concepts \& definitions, as well as experience summaries.
+$\bullet$ \textbf{Concepts \& definitions, as well as experience summaries}.
 %概念与定义。制造业中涉及的概念与定义非常繁杂。除了有对智能制造的发展、定义、目标以及各种需求与构成要素进行概述的，还有提出新的评价指标的。
 \ding{172} Concepts \& definitions. The concepts and definitions involved in manufacturing are very complicated. In addition to ones that provide an overview of the development, definition, goals, and various needs and components of smart manufacturing~\cite{Qu2020}, there are also others that propose new evaluation metrics~\cite{Baboli2021}.
 %经验总结。完善专业的经验总结可以为后续工作提供专业的指导意见。Cui等人对制造业大数据应用的驱动因素进行了归纳，同时Yin等人围绕工业过程检测的基本数据驱动方法做了细致调查。此外，Park等人针对数字孪生提出了详细的操作程序。
@@ -211,7 +211,7 @@ The above high-quality research works not only provide an adequate theoretical f
 \begin{figure}[pos=t]
 	\centering
 	\vspace{.5em}
-	\includegraphics[width=0.48\textwidth]{Images/table.pdf}
+	\includegraphics[width=0.48 \textwidth]{Images/table.pdf}
 	\caption{Categorization of the literature published in each section of this paper is based on manufacturing multimedia data types, visualization techniques, interaction analysis methods, and application areas.}
 	\vspace{-1em}
 	\label{fig:table}
@@ -400,7 +400,7 @@ In Analysis \& Feedback, most of the research work have the analytical feedback 
 \subsection{Discussion}
 %由于信号数据的多样性和复杂性，通用的可视分析方案和框架很难应用于制造产业的研发与生产过程。目前的可视化研究工作是针对某个具体的制造环节和制造产品的研发，比如： PAVED, IRVINE, SafetyLens等。这些可视分析系统的确帮助解决了一些实际工业生产制造和设计研发中的难题。但这些工作往往都需要专业的工程师一起协作，过高的专业性使可视化方案不再具有普适性。另外，在多传感器数据分析方面，如何利用好这些多元化数据去发现新的模式是值得我们去研究的。
 Due to the diversity and complexity of signal data, generic visual analytics solutions and frameworks are difficult to apply to research and development and production processes in the manufacturing industry.
-Current visualization research is focused on the development of a specific industrial segment and product, such as SafetyLens \cite{narechania2020safetylens}, PAVED \cite{cibulski2020paved}, IRVINE \cite{eirich2021irvine}, and so on. These visual analytics systems do help to solve some challenges in actual industrial manufacturing and design development. However, these efforts commonly require professional engineers to work together, and the excessive specialization makes the visualization solutions no longer universal. In addition, when it comes to multi-sensor data analysis, it is worthwhile to investigate how making good use of these diversified data to discover new patterns. 
+Current visualization research is focused on the development of a particular industrial segment and product, such as SafetyLens \cite{narechania2020safetylens}, PAVED \cite{cibulski2020paved}, IRVINE \cite{eirich2021irvine}, and so on. These visual analytics systems do help to solve some challenges in actual industrial manufacturing and design development. However, these efforts commonly require professional engineers to work together, and the excessive specialization makes the visualization solutions no longer universal. In addition, when it comes to multi-sensor data analysis, it is worthwhile to investigate how making good use of these diversified data to discover new patterns. 
 %   图像视频数据
 \section{Image \& Video Data}
 %在本节，我们将针对制造业中图像视频数据进行讨论
@@ -496,7 +496,7 @@ By combining an AR headset for monitoring and guidance with a portable tablet de
 % 在设计研发中，研究人员会将分析和反馈中的不足之处进行总结，探究其产生原因，然后对产品进行完善。
 In design \& development, researchers will summarize the shortcomings in analysis \& feedback, explore the reasons, and then improve the product~\cite{Townsend2022}.
 % 在教育培训中，为了减少成本，增加趣味性，方便展开职工培训，研究人员根据生产数据和行业安全手册开发了特定行业的安全培训互动模拟器。同时，也有研究人员对增强现实在人员装配培训的应用进行了论证。
-In education \& training, to reduce costs, increase interest and facilitate the roll-out of employee training, researchers developed industry-specific interactive safety training simulators based on production data and industry safety manuals~\cite{Moreland2019,Pantforder2009}. Meanwhile, some researchers have also discussed whether the usage of AR in personnel assembly training is justified~\cite{buttner2020augmented}.
+In education \& training, to reduce costs, increase interest and facilitate the roll-out of employee training, researchers developed an interactive safety training simulator for a particular industry based on production data and industry safety manuals~\cite{Moreland2019,Pantforder2009}. Meanwhile, some researchers have also discussed whether the usage of AR in personnel assembly training is justified~\cite{buttner2020augmented}.
 
 
 %   讨论
@@ -630,7 +630,7 @@ We choose several multimedia data collaboration cases to explain the role of vis
 %数字孪生
 \textbf{Digital Twin}
 %数字孪生是指通过集成物理反馈数据，并辅以人工智能、机器学习和软件分析，在信息化平台内建立一个数字化模拟。
-The digital twin refers to the creation of a digital simulation within an information technology platform by integrating physical feedback data and supplementing with artificial intelligence, machine learning and software analysis. When generating digital twins for specific industries, researchers need to explore five different directions: architecture, modeling, control algorithms, rule models, and physical-digital twin control~\cite{lei2021toward}. The humanmachine interaction problem of digital twin modeling on the Physical-Cyber side and Cyber-Human side needs to be solved by a digital twin visualization system for flexible manufacturing systems~\cite{Fan2021}. In practice, the digital twin data in the manufacturing environment can be visualized with the help of wearable devices (AR), providing operators with more useful and comprehensive information~\cite{Zhu2019}.
+The digital twin refers to the creation of a digital simulation within an information technology platform by integrating physical feedback data and supplementing with artificial intelligence, machine learning and software analysis. When generating digital twins for particular industries, researchers need to explore five different directions: architecture, modeling, control algorithms, rule models, and physical-digital twin control~\cite{lei2021toward}. The humanmachine interaction problem of digital twin modeling on the Physical-Cyber side and Cyber-Human side needs to be solved by a digital twin visualization system for flexible manufacturing systems~\cite{Fan2021}. In practice, the digital twin data in the manufacturing environment can be visualized with the help of wearable devices (AR), providing operators with more useful and comprehensive information~\cite{Zhu2019}.
 
 \textbf{Location Selection} To increase economic benefits, manufacturing industries may shift locations. The selection of locations is determined by several factors. Selecting a warehouse in business districts is a multi-criteria decision that needs to be based on urban road network data, GPS
 trajectory data, warehouse data, and store data. Visualization and visual analytics can help researchers compare and analyze these data to make the best choice~\cite{Li2020}.
